[package]
name = "ed2curve25519"
version = "0.1.0"
authors = ["Shimun <shimun@shimun.net>"]
edition = "2018"

[lib]
name = "ed2curve25519"
path = "src/lib.rs"

[[bin]]
name = "ed2curve25519-tool"
path = "src/bin.rs"

[dependencies]
libsodium-sys = "0.2.1"
thrussh-keys = "0.11.9"
base64 = "0.10.1"
rpassword = "3.0.2"
